--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,203 @@
-<!doctype html>
-<html>
-    <head>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-        <style>
-        body {
-            margin: 20px;
-        }
-        </style>
-    </head>
-    <body>
-        <div class="row">
-            <div class="col-md-8">
-            <form>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-              </div>
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox"> Check me out
-                </label>
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>ECE 368 Project</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="sticky-footer.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <!-- Begin page content -->
+    <div class="container">
+      <div class="page-header">
+        <h1>ECE Plan of Study Generator</h1>
+      </div>
+      <p class="lead">This is an ECE degree planner that automatically builds your remaining degree plan based on your major, your current degree progress, specified ECE areas of interest, and various other factors including study abroad, summer semesters, and co-op terms. This eliminates the difficult and time-consuming process of accounting for course prerequisites and the semesters courses are offered by yourself. Additionally, it will take into account specified ECE areas of interest and suggest ECE complementary electives based on that selection. It will also account for a degree minor and other specified general elective focus areas. Finally, it will suggest noteworthy electives correlated to the user’s interests by performing string searches on course descriptions.</p>
+
+    </div>
+
+    <form action="http://www.google.com" mathod="post">
+
+      <h2 for="action">Options:</h2>
+      <div>
+        <label for="action">Starting semester </label>
+        <select name="Starting Semester" id="action">
+          <option value="Fall">Fall</option>
+          <option value="Spring">Spring</option>
+        </select>
+
+        <select name="Starting Year" id="action">
+          <option value="2011">2011</option>
+          <option value="2012">2012</option>
+          <option value="2013">2013</option>
+          <option value="2014">2014</option>
+          <option value="2015">2015</option>
+          <option value="2016">2016</option>
+        </select>
+      </div>
+
+      <div>  
+        <label for="action">Expected Graduation Semester </label>
+
+        <select name="Graduating Semester" id="action">
+          <option value="Fall">Fall</option>
+          <option value="Spring">Spring</option>
+        </select>
+
+        <select name="Graduating Year" id="action">
+          <option value="2016">2016</option>
+          <option value="2017">2017</option>
+          <option value="2018">2018</option>
+          <option value="2019">2019</option>
+          <option value="2020">2020</option>
+          <option value="2021">2021</option>
+        </select>
+      </div>
+
+      <div>  
+        <label for="action">Declared Major </label>
+
+        <select name="Major" id="action">
+          <option value="EE">Electrical Engineering</option>
+          <option value="CE">Computer Engineering</option>
+        </select>
+      </div>
+
+     <div>  
+        <label for="action">Declared Minor </label>
+
+        <select name="Minor" id="action">
+          <option value="NONE">None</option>
+          <option value="ECON">Economics</option>
+          <option value="MATH">Mathematics</option>
+          <option value="PHYS">Physics</option>
+        </select>
+      </div>
+
+      <div>
+        <label for="action">Semesters not on campus: </label>
+      </div>
+
+      <div class="container">
+        <div>
+          <label for="action">2011</label>
+            <input type="checkbox" name="fa2011" value="Fall"> Fall
+            <input type="checkbox" name="sp2011" value="Spring"> Spring
+            <input type="checkbox" name="su2011" value="Summer"> Summer
         </div>
-    </body>
+        <div>
+          <label for="action">2012</label>
+            <input type="checkbox" name="fa2012" value="Fall"> Fall
+            <input type="checkbox" name="sp2012" value="Spring"> Spring
+            <input type="checkbox" name="su2012" value="Summer"> Summer
+        </div>
+        <div>
+          <label for="action">2013</label>
+            <input type="checkbox" name="fa2013" value="Fall"> Fall
+            <input type="checkbox" name="sp2013" value="Spring"> Spring
+            <input type="checkbox" name="su2013" value="Summer"> Summer
+        </div>
+
+        <div>
+          <label for="action">2014</label>
+            <input type="checkbox" name="fa2014" value="Fall" > Fall
+            <input type="checkbox" name="sp2014" value="Spring"> Spring
+            <input type="checkbox" name="su2014" value="Summer"> Summer
+        </div>
+
+        <div>
+          <label for="action">2015</label>
+            <input type="checkbox" name="fa2015" value="Fall" > Fall
+            <input type="checkbox" name="sp2015" value="Spring"> Spring
+            <input type="checkbox" name="su2015" value="Summer"> Summer
+        </div>
+
+        <div>
+          <label for="action">2016</label>
+            <input type="checkbox" name="fa2016" value="Fall" > Fall
+            <input type="checkbox" name="sp2016" value="Spring"> Spring
+            <input type="checkbox" name="su2016" value="Summer"> Summer
+        </div>
+
+        <div>
+          <label for="action">2017</label>
+            <input type="checkbox" name="fa2017" value="Fall" > Fall
+            <input type="checkbox" name="sp2017" value="Spring"> Spring
+            <input type="checkbox" name="su2017" value="Summer"> Summer
+        </div>
+
+        <div>
+          <label for="action">2018</label>
+            <input type="checkbox" name="fa2018" value="Fall" > Fall
+            <input type="checkbox" name="sp2018" value="Spring"> Spring
+            <input type="checkbox" name="su2018" value="Summer"> Summer
+        </div>
+
+        <div>
+          <label for="action">2019</label>
+            <input type="checkbox" name="fa2019" value="Fall" > Fall
+            <input type="checkbox" name="sp2019" value="Spring"> Spring
+            <input type="checkbox" name="su2019" value="Summer"> Summer
+        </div>
+
+        <div>
+          <label for="action">2020</label>
+            <input type="checkbox" name="fa2020" value="Fall" > Fall
+            <input type="checkbox" name="sp2020" value="Spring"> Spring
+            <input type="checkbox" name="su2020" value="Summer"> Summer
+        </div>
+
+        <div>
+          <label for="action">2021</label>
+            <input type="checkbox" name="fa2021" value="Fall" > Fall
+            <input type="checkbox" name="sp2021" value="Spring"> Spring
+            <input type="checkbox" name="su2021" value="Summer"> Summer
+        </div>
+
+      </div>
+
+      <div>
+        <label for="action">THIS IS THE SECTION FOR COURSES ALREADY TAKEN</label>
+      </div>
+
+      <button type-"submit" name="submit" value="submit">Do it </button>
+    </form>
+
+    <!-- This is the Footer -->
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">ECE368 Plan of Study Project</p>
+      </div>
+    </footer>
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
