no major changes, playing with GitHub

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
         <label for="action">THIS IS THE SECTION FOR COURSES ALREADY TAKEN</label>
       </div>
 
-      <button type-"submit" name="submit" value="submit">Do it </button>
+      <button type-"submit" name="submit" value="submit">Submit</button>
     </form>
 
     <!-- This is the Footer -->
