connected web page to backend

--- a/src/index.html
+++ b/src/index.html
@@ -43,22 +43,22 @@
 
         <header class="row">
             <div class="page-header">
-                <h1>ECE Plan of Study Generator</h1>
+                <h1><a href="/">ECE Plan of Study Generator</a></h1>
             </div>
             
-            <div class="col-lg-5">
+            <!--<div>
                         <p>
                 This is an ECE degree planner that automatically builds your remaining degree plan based on your major, your current degree progress, specified ECE areas of interest, and various other factors including study abroad, summer semesters, and co-op terms. This eliminates the difficult and time-consuming process of accounting for course prerequisites and the semesters courses are offered by yourself. Additionally, it will take into account specified ECE areas of interest and suggest ECE complementary electives based on that selection. It will also account for a degree minor and other specified general elective focus areas. Finally, it will suggest noteworthy electives correlated to the user’s interests by performing string searches on course descriptions.
             </p>
-            </div>
+            </div>-->
         </header>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-5">
-            <form action="/submit" method="post">
+            <div class="content">
+            <form>
 
-                <h2>Options</h2>
+                <!--<h2>Options</h2>-->
 
                 <div class="form-group">
                     <label>Starting Semester</label>
@@ -133,7 +133,7 @@
                     <textarea name="courses_taken" class="form-control"></textarea>
                 </div>
 
-                <input type="submit" class="btn btn-primary" value="Submit">
+                <input type="submit" name="submit" class="btn btn-primary" value="Submit">
             </form>
             </div>
         </div>
