--- a/src/index.html
+++ b/src/index.html
@@ -104,9 +104,9 @@
                     <select id="s" multiple name="semesters">
                     </select>
 
-                    <a href="#" onclick="listbox_moveacross('s', 'd')">&gt;&gt;</a>
+                    <a onclick="listbox_moveacross('s', 'd')">&gt;&gt;</a>
                     <br/>
-                    <a href="#" onclick="listbox_moveacross('d', 's')">&lt;&lt;</a>
+                    <a onclick="listbox_moveacross('d', 's')">&lt;&lt;</a>
                     <label for="action"> Semesters Off Campus </label>
 
                     <select id="d" name="not_semesters" multiple>
